jitsi/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-web
  namespace: korczewski-jitsi
  labels:
    app: jitsi-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jitsi-web
  template:
    metadata:
      labels:
        app: jitsi-web
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-1
      containers:
        - name: web
          image: jitsi/web:stable-9364
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
          volumeMounts:
            - name: web-config
              mountPath: /config/custom-config.js
              subPath: custom-config.js
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
      volumes:
        - name: web-config
          configMap:
            name: jitsi-web-config
