jitsi/service-coturn.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn
  namespace: korczewski-jitsi
spec:
  selector:
    app: coturn
  ports:
    - name: turn-udp
      port: 3478
      protocol: UDP
    - name: turn-tcp
      port: 3478
      protocol: TCP
    - name: turns-tcp
      port: 5349
      protocol: TCP
