jitsi/service-jvb-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: jvb-http
  namespace: korczewski-jitsi
spec:
  selector:
    app: jvb
  ports:
    - name: private
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: public
      port: 9090
      targetPort: 9090
      protocol: TCP
