jitsi/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-web
  namespace: korczewski-jitsi
spec:
  selector:
    app: jitsi-web
  ports:
    - port: 80
      targetPort: 80
